# ferpmodels

./: README  README.md
benchmarks/: qbfeval20.txt
benchmarks/parity/: benchmarks  parity10.qdimacs  parity100.qdimacs  parity20.qdimacs  parity30.qdimacs  parity40.qdimacs  parity50.qdimacs  parity60.qdimacs  parity70.qdimacs  parity80.qdimacs  parity90.qdimacs
code/: README  install.py  pipeline.py  pipeline_cluster.py  pipeline_mine.py  requirements.py  test.qdimacs
code/ferpcert2/: Makefile  admin.c  admin.h  extract.c  extract.h  ferpcert.c  formula.c  formula.h  proof.c  proof.h  simpleaig.c  simpleaig.h
code/toferp/: CMakeLists.txt  Reader.cpp  Reader.h  VarManager.cpp  VarManager.h  common.h  main.cpp  parseutils.h
logs/parity/caqe/: parity10.err  parity100.err  parity20.err  parity30.err  parity40.err  parity50.err  parity60.err  parity70.err  parity80.err  parity90.err
logs/parity/ferpert/: parity10.err  parity100.err  parity20.err  parity30.err  parity40.err  parity50.err  parity60.err  parity70.err  parity80.err  parity90.err
logs/parity/qbfcert/: parity10.err  parity100.err  parity20.err  parity30.err  parity40.err  parity50.err  parity60.err  parity70.err  parity80.err  parity90.err
logs/qbfeval20/caqe/: AR-fixpoint-1.err  AR-fixpoint-5.err  Adder2-10-s.err  Adder2-14-s.err  Adder2-16-c.err  Adder2-16-s.err  Adder2-8-c.err  Adder2-8-s.err  C5315.blif_0.10_0.20_0_0_inp_exact.err  C5315.blif_0.10_0.20_0_0_out_exact.err  C5315.blif_0.10_0.20_0_1_out_exact.err  GuidanceService.err  (+509 more)
scripts/: caqecheck-kissat.sh  ferpcert-kissat.sh  qbfcert.sh
(+236 files in other folders)
